[package]
name = "blog_os"
version = "0.1.0"
authors = ["Sai Wolf <saiwolf@swmnu.net>", "Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]