[package]
name = "blog_os"
version = "0.1.0"
authors = ["Sai Wolf <saiwolf@swmnu.net>", "Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[features]
integration-test = []

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[dev-dependencies]
array-init = "0.0.3"

[dependencies]
bootloader = { version = "0.4.0", features = ["map_physical_memory"]}
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.5.2"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]